Fixed issue where the gutter background color bleed into the collapse column in the first two lines.

--- a/main.less
+++ b/main.less
@@ -107,6 +107,7 @@
 .CodeMirror-foldgutter {
 		padding-left: 7px;
 		margin-left: 5px;
+		margin-bottom: 0;
 		width: 7px;
 		background-color: #2a2a2a;
 		text-align: right;
